--- a/T2-CG.ipynb
+++ b/T2-CG.ipynb
@@ -71,7 +71,7 @@
     "glfw.init()\n",
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE);\n",
     "altura = 1600\n",
-    "largura = 1200\n",
+    "largura = 900\n",
     "window = glfw.create_window(largura, altura, \"Malhas e Texturas\", None, None)\n",
     "glfw.make_context_current(window)"
    ]
@@ -188,7 +188,7 @@
     "# Request a program and shader slots from GPU\n",
     "program  = glCreateProgram()\n",
     "vertex   = glCreateShader(GL_VERTEX_SHADER)\n",
-    "fragment = glCreateShader(GL_FRAGMENT_SHADER)\n"
+    "fragment = glCreateShader(GL_FRAGMENT_SHADER)"
    ]
   },
   {
@@ -372,8 +372,7 @@
     "    model['texture'] = texture_coords\n",
     "    model['faces'] = faces\n",
     "\n",
-    "    return model\n",
-    "\n"
+    "    return model"
    ]
   },
   {
@@ -430,16 +429,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo cube.obj. Vertice final: 36\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"modelo = load_model_from_file('caixa/caixa.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo cube.obj. Vertice final:',len(vertices_list))\\n\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(0,'caixa/caixa2.jpg')\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "modelo = load_model_from_file('caixa/caixa.obj')\n",
+    "'''modelo = load_model_from_file('caixa/caixa.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
@@ -454,7 +455,7 @@
     "\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(0,'caixa/caixa2.jpg')\n"
+    "load_texture_from_file(0,'caixa/caixa2.jpg')'''"
    ]
   },
   {
@@ -463,16 +464,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 36\n",
-      "Processando modelo terreno.obj. Vertice final: 42\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"modelo = load_model_from_file('terreno/terreno2.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo terreno.obj. Vertice inicial:',len(vertices_list))\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo terreno.obj. Vertice final:',len(vertices_list))\\n\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(1,'terreno/pedra.jpg')\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "modelo = load_model_from_file('terreno/terreno2.obj')\n",
+    "'''modelo = load_model_from_file('terreno/terreno2.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo terreno.obj. Vertice inicial:',len(vertices_list))\n",
@@ -487,7 +490,7 @@
     "\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(1,'terreno/pedra.jpg')\n"
+    "load_texture_from_file(1,'terreno/pedra.jpg')'''\n"
    ]
   },
   {
@@ -496,16 +499,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processando modelo casa.obj. Vertice inicial: 42\n",
-      "Processando modelo casa.obj. Vertice final: 1476\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"modelo = load_model_from_file('casa/casa.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo casa.obj. Vertice inicial:',len(vertices_list))\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo casa.obj. Vertice final:',len(vertices_list))\\n\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(2,'casa/casa.jpg')\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "modelo = load_model_from_file('casa/casa.obj')\n",
+    "'''modelo = load_model_from_file('casa/casa.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo casa.obj. Vertice inicial:',len(vertices_list))\n",
@@ -520,7 +525,7 @@
     "\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(2,'casa/casa.jpg')\n"
+    "load_texture_from_file(2,'casa/casa.jpg')'''\n"
    ]
   },
   {
@@ -529,16 +534,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processando modelo monstro.obj. Vertice inicial: 1476\n",
-      "Processando modelo monstro.obj. Vertice final: 7584\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"modelo = load_model_from_file('monstro/monstro.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo monstro.obj. Vertice inicial:',len(vertices_list))\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append( modelo['texture'][texture_id-1] )\\nprint('Processando modelo monstro.obj. Vertice final:',len(vertices_list))\\n\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(3,'monstro/monstro.jpg')\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "modelo = load_model_from_file('monstro/monstro.obj')\n",
+    "'''modelo = load_model_from_file('monstro/monstro.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo monstro.obj. Vertice inicial:',len(vertices_list))\n",
@@ -553,7 +560,7 @@
     "\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(3,'monstro/monstro.jpg')\n"
+    "load_texture_from_file(3,'monstro/monstro.jpg')'''\n"
    ]
   },
   {
@@ -565,40 +572,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 7584\n",
-      "Processando modelo cube.obj. Vertice final: 8124\n"
-     ]
-    },
-    {
-     "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file 'model-tree/lowpolytree.fbx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-b27a8ad46431>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m### carregando textura equivalente e definindo um id (buffer): use um id por textura!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mload_texture_from_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'model-tree/lowpolytree.fbx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-13-bbba4b34abef>\u001b[0m in \u001b[0;36mload_texture_from_file\u001b[0;34m(texture_id, img_textura)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mglTexParameteri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TEXTURE_2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGL_TEXTURE_MIN_FILTER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGL_LINEAR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mglTexParameteri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGL_TEXTURE_2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGL_TEXTURE_MAG_FILTER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGL_LINEAR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_textura\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mimg_width\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mimg_height\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2942\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2943\u001b[0m     raise UnidentifiedImageError(\n\u001b[0;32m-> 2944\u001b[0;31m         \u001b[0;34m\"cannot identify image file %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2945\u001b[0m     )\n\u001b[1;32m   2946\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file 'model-tree/lowpolytree.fbx'"
+      "Processando modelo cube.obj. Vertice inicial: 0\n",
+      "Processando modelo cube.obj. Vertice final: 139617\n"
      ]
     }
    ],
    "source": [
-    "modelo = load_model_from_file('model-tree/lowpolytree.obj')\n",
+    "modelo = load_model_from_file('horse.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
     "for face in modelo['faces']:\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
-    "    #for texture_id in face[1]:\n",
-    "    #    textures_coord_list.append(modelo['texture'][texture_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append(modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo cube.obj. Vertice final:',len(vertices_list))\n",
     "\n",
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(4,'model-tree/lowpolytree.3ds')"
+    "load_texture_from_file(4,'horse/sky_texture.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processando modelo cube.obj. Vertice inicial: 139617\n",
+      "Processando modelo cube.obj. Vertice final: 279234\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('castle.obj')\n",
+    "\n",
+    "### inserindo vertices do modelo no vetor de vertices\n",
+    "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append(modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo cube.obj. Vertice final:',len(vertices_list))\n",
+    "\n",
+    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
+    "\n",
+    "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
+    "load_texture_from_file(5,'monstro/monstro.jpg')"
    ]
   },
   {
@@ -614,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,13 +713,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def desenha_caixa():\n",
-    "    \n",
-    "    \n",
     "    # aplica a matriz model\n",
     "    \n",
     "    # rotacao\n",
@@ -720,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,15 +799,12 @@
     "    glBindTexture(GL_TEXTURE_2D, 2)\n",
     "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 42, 1476-42) ## renderizando\n",
-    "    \n",
-    "\n",
-    "    "
+    "    glDrawArrays(GL_TRIANGLES, 42, 1476-42) ## renderizando    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,27 +830,24 @@
     "    \n",
     "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 1476, 7584-1476) ## renderizando\n",
-    "    \n",
-    "\n",
-    "    "
+    "    glDrawArrays(GL_TRIANGLES, 1476, 7584-1476) ## renderizando"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desenha_exterior():\n",
+    "def desenha_cavalo():\n",
     "    # aplica a matriz model\n",
     "    \n",
     "    # rotacao\n",
-    "    angle = 0.0;\n",
-    "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
+    "    angle = rotacao_inc;\n",
+    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = 0.0; t_y = -1.0; t_z = 0.0;\n",
+    "    t_x = 0.0; t_y = 0.0; t_z = 0.0;\n",
     "    \n",
     "    # escala\n",
     "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
@@ -840,9 +858,37 @@
     "       \n",
     "    #define id da textura do modelo\n",
     "    glBindTexture(GL_TEXTURE_2D, 4)\n",
-    "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 7584, ) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 0, 139617) ## renderizando"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_castelo():\n",
+    "    # aplica a matriz model\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = rotacao_inc;\n",
+    "    r_x = 0.0; r_y = 1.0; r_z = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = 0.0; t_y = 0.0; t_z = 0.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 5)\n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, 139617, 279234-139617) ## renderizando"
    ]
   },
   {
@@ -857,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +961,6 @@
     "\n",
     "    yaw += xoffset;\n",
     "    pitch += yoffset;\n",
-    "\n",
     "    \n",
     "    if pitch >= 90.0: pitch = 90.0\n",
     "    if pitch <= -90.0: pitch = -90.0\n",
@@ -925,11 +970,9 @@
     "    front.y = math.sin(glm.radians(pitch))\n",
     "    front.z = math.sin(glm.radians(yaw)) * math.cos(glm.radians(pitch))\n",
     "    cameraFront = glm.normalize(front)\n",
-    "\n",
-    "\n",
     "    \n",
     "glfw.set_key_callback(window,key_event)\n",
-    "glfw.set_cursor_pos_callback(window, mouse_event)\n"
+    "glfw.set_cursor_pos_callback(window, mouse_event)"
    ]
   },
   {
@@ -943,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +996,6 @@
     "    \n",
     "    matrix_transform = glm.mat4(1.0) # instanciando uma matriz identidade\n",
     "\n",
-    "    \n",
     "    # aplicando translacao\n",
     "    matrix_transform = glm.translate(matrix_transform, glm.vec3(t_x, t_y, t_z))    \n",
     "    \n",
@@ -990,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,12 +1071,14 @@
     "    if polygonal_mode==False:\n",
     "        glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n",
     "\n",
-    "    desenha_caixa()   \n",
-    "    desenha_terreno()\n",
-    "    desenha_casa()\n",
+    "    #desenha_caixa()   \n",
+    "    #desenha_terreno()\n",
+    "    #desenha_casa()\n",
+    "    desenha_cavalo()\n",
+    "    desenha_castelo()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
-    "    desenha_monstro(rotacao_inc)\n",
+    "    #desenha_monstro(rotacao_inc)\n",
     "  \n",
     "    mat_view = view()\n",
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
