debuggando te texturas

--- a/T2-CG.ipynb
+++ b/T2-CG.ipynb
@@ -70,8 +70,8 @@
    "source": [
     "glfw.init()\n",
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE);\n",
-    "altura = 1600\n",
-    "largura = 900\n",
+    "altura = 900\n",
+    "largura = 1600\n",
     "window = glfw.create_window(largura, altura, \"Malhas e Texturas\", None, None)\n",
     "glfw.make_context_current(window)"
    ]
@@ -392,11 +392,14 @@
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR)\n",
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_LINEAR)\n",
     "    img = Image.open(img_textura)\n",
+    "    print(img_textura, img.mode)\n",
     "    img_width = img.size[0]\n",
     "    img_height = img.size[1]\n",
     "    image_data = img.tobytes(\"raw\", \"RGB\", 0, -1)\n",
+    "    #image_data = img.convert(\"RGBA\").tobytes(\"raw\", \"RGBA\",0,-1)\n",
     "    #image_data = np.array(list(img.getdata()), np.uint8)\n",
-    "    glTexImage2D(GL_TEXTURE_2D, 0, GL_RGB, img_width, img_height, 0, GL_RGB, GL_UNSIGNED_BYTE, image_data)"
+    "    glTexImage2D(GL_TEXTURE_2D, 0, GL_RGB, img_width, img_height, 0, GL_RGB, GL_UNSIGNED_BYTE, image_data)\n",
+    "    #glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA, img_width, img_height, 0, GL_RGBA, GL_UNSIGNED_BYTE, image_data)"
    ]
   },
   {
@@ -573,7 +576,8 @@
      "output_type": "stream",
      "text": [
       "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo cube.obj. Vertice final: 139617\n"
+      "Processando modelo cube.obj. Vertice final: 139617\n",
+      "horse/sky_texture.jpg RGB\n"
      ]
     }
    ],
@@ -605,12 +609,13 @@
      "output_type": "stream",
      "text": [
       "Processando modelo cube.obj. Vertice inicial: 139617\n",
-      "Processando modelo cube.obj. Vertice final: 279234\n"
+      "Processando modelo cube.obj. Vertice final: 144714\n",
+      "castle-low-poly/textures/texture_diffuse.png RGBA\n"
      ]
     }
    ],
    "source": [
-    "modelo = load_model_from_file('castle.obj')\n",
+    "modelo = load_model_from_file('castle-low-poly/castle2.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
@@ -624,7 +629,7 @@
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(5,'monstro/monstro.jpg')"
+    "load_texture_from_file(5,'castle-low-poly/textures/texture_diffuse.png')"
    ]
   },
   {
@@ -888,7 +893,7 @@
     "    #define id da textura do modelo\n",
     "    glBindTexture(GL_TEXTURE_2D, 5)\n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 139617, 279234-139617) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 139617, 144714-139617) ## renderizando"
    ]
   },
   {
@@ -1103,6 +1108,13 @@
     "\n",
     "* Coloque um cubo para \"encapsular\" todo o seu cenário. A face inferior do cubo será seu terreno. A face superior será o céu. As faces laterais serão horizontes. Crie um único arquivo de textura (imagem png ou jpg) com todas as faces. No arquivo .obj do modelo, define as coordenadas de textura para cada triângulo."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
