--- a/T2-CG.ipynb
+++ b/T2-CG.ipynb
@@ -26,13 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: pip is being invoked by an old script wrapper. This will fail in a future version of pip.\n",
-      "Please see https://github.com/pypa/pip/issues/5599 for advice on fixing the underlying issue.\n",
-      "To avoid this problem you can invoke Python with '-m pip' instead of running pip directly.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: PyGLM==1.1.8 in /home/baldissera/.local/lib/python3.7/site-packages (1.1.8)\n",
-      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 21.1.3 is available.\n",
-      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: PyGLM==1.1.8 in c:\\users\\bruga\\anaconda3\\lib\\site-packages (1.1.8)\n"
      ]
     }
    ],
@@ -1079,8 +1073,9 @@
     "    #desenha_caixa()   \n",
     "    #desenha_terreno()\n",
     "    #desenha_casa()\n",
-    "    desenha_cavalo()\n",
+    "    \n",
     "    desenha_castelo()\n",
+    "    desenha_cavalo()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "    #desenha_monstro(rotacao_inc)\n",
@@ -1137,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
