castelo trocado por igreja

--- a/T2-CG.ipynb
+++ b/T2-CG.ipynb
@@ -436,30 +436,37 @@
      "output_type": "stream",
      "text": [
       "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "Processando modelo castelo.obj. Vertice final: 5097\n",
-      "[['9.819546', '5.807713', '7.630792'], ['9.819546', '-0.093484', '2.915627'], ['9.819546', '-0.093484', '7.630792'], ['10.319546', '5.807713', '2.915628'], ['10.319548', '-0.093484', '7.630794'], ['10.319546', '-0.093484', '2.915628'], ['10.319548', '5.807713', '7.630794'], ['9.819546', '-0.093484', '7.630792'], ['10.319548', '-0.093484', '7.630794'], ['10.319546', '-0.093484', '2.915628'], ['9.819546', '-0.093484', '7.630792'], ['9.819546', '-0.093484', '2.915627'], ['10.319546', '5.807713', '2.915628'], ['9.819546', '5.807713', '7.630792'], ['10.319548', '5.807713', '7.630794'], ['15.619617', '12.464576', '-12.887125'], ['15.498436', '11.968341', '-13.188416'], ['15.640051', '11.968341', '-12.836322'], ['15.498436', '12.548251', '-13.188416'], ['15.945782', '11.968341', '-13.368342'], ['15.498436', '11.968341', '-13.188416'], ['15.945782', '11.968341', '-13.368342'], ['16.066963', '12.464576', '-13.067051'], ['16.087395', '11.968341', '-13.016247'], ['16.087395', '11.968341', '-13.016247'], ['15.619617', '12.464576', '-12.887125'], ['15.640051', '11.968341', '-12.836322'], ['15.498436', '12.548251', '-13.188416'], ['16.066963', '12.464576', '-13.067051'], ['15.945782', '12.548251', '-13.368342'], ['16.395748', '12.464576', '-13.320560'], ['16.139837', '11.968341', '-13.520490'], ['16.438898', '11.968341', '-13.286848'], ['16.139837', '12.548251', '-13.520490'], ['16.436684', '11.968341', '-13.900455'], ['16.139837', '11.968341', '-13.520490'], ['16.436684', '11.968341', '-13.900455'], ['16.692595', '12.464576', '-13.700524'], ['16.735744', '11.968341', '-13.666812'], ['16.735744', '11.968341', '-13.666812'], ['16.395748', '12.464576', '-13.320560'], ['16.438898', '11.968341', '-13.286848'], ['16.139837', '12.548251', '-13.520490'], ['16.692595', '12.464576', '-13.700524'], ['16.436684', '12.548251', '-13.900455'], ['16.860779', '12.464576', '-14.160744'], ['16.539284', '11.968341', '-14.206582'], ['16.914989', '11.968341', '-14.153014'], ['16.539284', '12.548251', '-14.206582'], ['16.607342', '11.968341', '-14.683928']]\n",
-      "castle-low-poly/textures/texture_diffuse.png RGBA\n"
+      "hiero_negro vertice inicial: 0\n",
+      "pared_de_piedra vertice inicial: 1658880\n",
+      "tejado_roñoso vertice inicial: 1676055\n",
+      "piedra_de_la_portada vertice inicial: 1677714\n",
+      "Processando modelo castelo.obj. Vertice final: 1681191\n",
+      "igreja/textures/parede.jpg RGB\n",
+      "igreja/textures/telhado.jpg RGB\n"
      ]
     }
    ],
    "source": [
-    "modelo = load_model_from_file('castle-low-poly/castle.obj')\n",
+    "modelo = load_model_from_file('igreja/iglesia.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
+    "materials = []\n",
     "for face in modelo['faces']:\n",
+    "    if face[2] not in materials:\n",
+    "        print(face[2], \"vertice inicial:\", len(vertices_list))\n",
+    "    materials.append(face[2])\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append(modelo['vertices'][vertice_id-1])\n",
     "    for texture_id in face[1]:\n",
     "        textures_coord_list.append(modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo castelo.obj. Vertice final:',len(vertices_list))\n",
     "\n",
-    "print(vertices_list[0:50])\n",
-    "\n",
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(0,'castle-low-poly/textures/texture_diffuse.png')"
+    "load_texture_from_file(0,'igreja/textures/parede.jpg')\n",
+    "load_texture_from_file(1,'igreja/textures/telhado.jpg')"
    ]
   },
   {
@@ -471,8 +478,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 5097\n",
-      "Processando modelo intfloor.obj. Vertice final: 5103\n",
+      "Processando modelo terreno.obj. Vertice inicial: 1681191\n",
+      "Processando modelo intfloor.obj. Vertice final: 1681197\n",
       "intfloor/tex1.jpg RGB\n"
      ]
     }
@@ -492,7 +499,7 @@
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(1,'intfloor/tex1.jpg')\n"
+    "load_texture_from_file(2,'intfloor/tex1.jpg')\n"
    ]
   },
   {
@@ -504,8 +511,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo casa.obj. Vertice inicial: 5103\n",
-      "Processando modelo horse.obj. Vertice final: 139623\n",
+      "Processando modelo casa.obj. Vertice inicial: 1681197\n",
+      "Processando modelo horse.obj. Vertice final: 1815717\n",
       "horse/horse_bodytex.jpg RGB\n"
      ]
     }
@@ -525,7 +532,7 @@
     "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
     "\n",
     "### carregando textura equivalente e definindo um id (buffer): use um id por textura!\n",
-    "load_texture_from_file(2,'horse/horse_bodytex.jpg')\n"
+    "load_texture_from_file(3,'horse/horse_bodytex.jpg')\n"
    ]
   },
   {
@@ -537,8 +544,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo monstro.obj. Vertice inicial: 139623\n",
-      "Processando modelo argustav.obj. Vertice final: 190839\n"
+      "Processando modelo monstro.obj. Vertice inicial: 1815717\n",
+      "Processando modelo argustav.obj. Vertice final: 1866933\n"
      ]
     }
    ],
@@ -569,8 +576,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 190839\n",
-      "Processando modelo cauldron.obj. Vertice final: 196830\n",
+      "Processando modelo cube.obj. Vertice inicial: 1866933\n",
+      "Processando modelo cauldron.obj. Vertice final: 1872924\n",
       "cauldron/ironcauldron.jpg RGB\n"
      ]
     }
@@ -717,7 +724,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desenha_castelo():\n",
+    "def desenha_igreja():\n",
     "    # aplica a matriz model\n",
     "    \n",
     "    # rotacao\n",
@@ -725,7 +732,7 @@
     "    r_x = 0.0; r_y = 0.0; r_z = 0.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = 0.0; t_y = 0.0; t_z = 0.0;\n",
+    "    t_x = 1.0; t_y = 1.0; t_z = 1.0;\n",
     "    \n",
     "    # escala\n",
     "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
@@ -736,9 +743,18 @@
     "       \n",
     "    #define id da textura do modelo\n",
     "    glBindTexture(GL_TEXTURE_2D, 0)\n",
-    "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 0, 5097) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 1658880, 1676055-1658880) ## renderizando\n",
+    "    \n",
+    "     #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 1)\n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, 1676055, 1677714-1676055) ## renderizando\n",
+    "    \n",
+    "     #define id da textura do modelo\n",
+    "    glBindTexture(GL_TEXTURE_2D, 0)\n",
+    "    # desenha o modelo\n",
+    "    glDrawArrays(GL_TRIANGLES, 1677714, 1681191-1677714) ## renderizando"
    ]
   },
   {
@@ -768,7 +784,7 @@
     "    glBindTexture(GL_TEXTURE_2D, 1)\n",
     "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 5097, 5103-5097) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 1681191, 1681197-1681191) ## renderizando"
    ]
   },
   {
@@ -798,7 +814,7 @@
     "    glBindTexture(GL_TEXTURE_2D, 2)\n",
     "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 5103, 139623-5103) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 1681197, 1815717-1681197) ## renderizando"
    ]
   },
   {
@@ -828,7 +844,7 @@
     "    glBindTexture(GL_TEXTURE_2D, 3)\n",
     "    \n",
     "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, 139623, 190839-139623) ## renderizando"
+    "    glDrawArrays(GL_TRIANGLES, 1815717, 190839-1815717) ## renderizando"
    ]
   },
   {
@@ -995,13 +1011,13 @@
     "    matrix_transform = glm.mat4(1.0) # instanciando uma matriz identidade\n",
     "\n",
     "    # aplicando translacao\n",
-    "    matrix_transform = glm.translate(matrix_transform, glm.vec3(t_x, t_y, t_z))    \n",
+    "    #matrix_transform = glm.translate(matrix_transform, glm.vec3(t_x, t_y, t_z))    \n",
     "    \n",
     "    # aplicando rotacao\n",
-    "    matrix_transform = glm.rotate(matrix_transform, angle, glm.vec3(r_x, r_y, r_z))\n",
+    "    #matrix_transform = glm.rotate(matrix_transform, angle, glm.vec3(r_x, r_y, r_z))\n",
     "    \n",
     "    # aplicando escala\n",
-    "    matrix_transform = glm.scale(matrix_transform, glm.vec3(s_x, s_y, s_z))\n",
+    "    #matrix_transform = glm.scale(matrix_transform, glm.vec3(s_x, s_y, s_z))\n",
     "    \n",
     "    matrix_transform = np.array(matrix_transform).T # pegando a transposta da matriz (glm trabalha com ela invertida)\n",
     "    return matrix_transform\n",
@@ -1067,14 +1083,13 @@
     "    if polygonal_mode==False:\n",
     "        glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n",
     "\n",
-    "    desenha_castelo()   \n",
+    "    desenha_igreja()\n",
     "    #desenha_chao_interior()\n",
     "    #desenha_cavalo()\n",
     "    #desenha_argustav()\n",
-    "    #desenha_caldeirao()\n",
-    "    \n",
+    "    #desenha_caldeirao()   \n",
+    "\n",
     "    #rotacao_inc += 0.1\n",
-    "    #desenha_monstro(rotacao_inc)\n",
     "  \n",
     "    mat_view = view()\n",
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
