--- a/T2-CG.ipynb
+++ b/T2-CG.ipynb
@@ -26,13 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: pip is being invoked by an old script wrapper. This will fail in a future version of pip.\n",
-      "Please see https://github.com/pypa/pip/issues/5599 for advice on fixing the underlying issue.\n",
-      "To avoid this problem you can invoke Python with '-m pip' instead of running pip directly.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: PyGLM==1.1.8 in /home/baldissera/.local/lib/python3.7/site-packages (1.1.8)\n",
-      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 21.1.3 is available.\n",
-      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: PyGLM==1.1.8 in c:\\users\\bruga\\anaconda3\\lib\\site-packages (1.1.8)\n"
      ]
     }
    ],
@@ -398,6 +392,9 @@
     "    image_data = img.tobytes(\"raw\", \"RGB\", 0, -1)\n",
     "    #image_data = img.convert(\"RGBA\").tobytes(\"raw\", \"RGBA\",0,-1)\n",
     "    #image_data = np.array(list(img.getdata()), np.uint8)\n",
+    "    #print(type(img_width))\n",
+    "    #print(type(img_height))\n",
+    "    #print(type(image_data))\n",
     "    glTexImage2D(GL_TEXTURE_2D, 0, GL_RGB, img_width, img_height, 0, GL_RGB, GL_UNSIGNED_BYTE, image_data)\n",
     "    #glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA, img_width, img_height, 0, GL_RGBA, GL_UNSIGNED_BYTE, image_data)"
    ]
@@ -436,18 +433,18 @@
      "output_type": "stream",
      "text": [
       "Processando modelo cube.obj. Vertice inicial: 0\n",
-      "hiero_negro vertice inicial: 0\n",
-      "pared_de_piedra vertice inicial: 1658880\n",
-      "tejado_roñoso vertice inicial: 1676055\n",
-      "piedra_de_la_portada vertice inicial: 1677714\n",
-      "Processando modelo castelo.obj. Vertice final: 1681191\n",
+      "pared_de_piedra vertice inicial: 0\n",
+      "hiero_negro vertice inicial: 16563\n",
+      "tejado_roÃ±oso vertice inicial: 17175\n",
+      "piedra_de_la_portada vertice inicial: 18834\n",
+      "Processando modelo castelo.obj. Vertice final: 21195\n",
       "igreja/textures/parede.jpg RGB\n",
       "igreja/textures/telhado.jpg RGB\n"
      ]
     }
    ],
    "source": [
-    "modelo = load_model_from_file('igreja/iglesia.obj')\n",
+    "modelo = load_model_from_file('iglesiabuena.obj')\n",
     "\n",
     "### inserindo vertices do modelo no vetor de vertices\n",
     "print('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\n",
@@ -478,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 1681191\n",
-      "Processando modelo intfloor.obj. Vertice final: 1681197\n",
+      "Processando modelo terreno.obj. Vertice inicial: 21195\n",
+      "Processando modelo intfloor.obj. Vertice final: 21201\n",
       "intfloor/tex1.jpg RGB\n"
      ]
     }
@@ -511,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo casa.obj. Vertice inicial: 1681197\n",
-      "Processando modelo horse.obj. Vertice final: 1815717\n",
+      "Processando modelo casa.obj. Vertice inicial: 21201\n",
+      "Processando modelo horse.obj. Vertice final: 155721\n",
       "horse/horse_bodytex.jpg RGB\n"
      ]
     }
@@ -544,8 +541,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo monstro.obj. Vertice inicial: 1815717\n",
-      "Processando modelo argustav.obj. Vertice final: 1866933\n"
+      "Processando modelo monstro.obj. Vertice inicial: 155721\n",
+      "Processando modelo argustav.obj. Vertice final: 206937\n"
      ]
     }
    ],
@@ -576,9 +573,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo cube.obj. Vertice inicial: 1866933\n",
-      "Processando modelo cauldron.obj. Vertice final: 1872924\n",
+      "Processando modelo cube.obj. Vertice inicial: 206937\n",
+      "Processando modelo cauldron.obj. Vertice final: 212928\n",
       "cauldron/ironcauldron.jpg RGB\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "exception: access violation reading 0x000001B7D312F000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-8d9f7d6d1db5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m### carregando textura equivalente e definindo um id (buffer): use um id por textura!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mload_texture_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'cauldron/ironcauldron.jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-3f75ff7a7384>\u001b[0m in \u001b[0;36mload_texture_from_file\u001b[1;34m(texture_id, img_textura)\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;31m#print(type(img_height))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;31m#print(type(image_data))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mglTexImage2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGL_TEXTURE_2D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGL_RGB\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg_width\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg_height\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGL_RGB\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGL_UNSIGNED_BYTE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[1;31m#glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA, img_width, img_height, 0, GL_RGBA, GL_UNSIGNED_BYTE, image_data)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\OpenGL\\latebind.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **named)\u001b[0m\n\u001b[0;32m     41\u001b[0m             \"\"\"\n\u001b[0;32m     42\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_finalCall\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mnamed\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mAttributeError\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_finalCall\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\OpenGL\\wrapper.py\u001b[0m in \u001b[0;36mwrapperCall\u001b[1;34m(*args)\u001b[0m\n\u001b[0;32m    880\u001b[0m                                 \u001b[0mcArguments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpyArgs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    881\u001b[0m                                 \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 882\u001b[1;33m                                     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwrappedOperation\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0mcArguments\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    883\u001b[0m                                 \u001b[1;32mexcept\u001b[0m \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mArgumentError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    884\u001b[0m                                     \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margs\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcArguments\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: exception: access violation reading 0x000001B7D312F000"
      ]
     }
    ],
@@ -602,20 +613,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"modelo = load_model_from_file('/castle2.obj')\\n\\n### inserindo vertices do modelo no vetor de vertices\\nprint('Processando modelo cube.obj. Vertice inicial:',len(vertices_list))\\nfor face in modelo['faces']:\\n    for vertice_id in face[0]:\\n        vertices_list.append( modelo['vertices'][vertice_id-1] )\\n    for texture_id in face[1]:\\n        textures_coord_list.append(modelo['texture'][texture_id-1] )\\nprint('Processando modelo cube.obj. Vertice final:',len(vertices_list))\\n\\n### inserindo coordenadas de textura do modelo no vetor de texturas\\n\\n### carregando textura equivalente e definindo um id (buffer): use um id por textura!\\nload_texture_from_file(5,'castle-low-poly/textures/texture_diffuse.png')\""
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''modelo = load_model_from_file('/castle2.obj')\n",
     "\n",
@@ -1143,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
